fix auth service section

--- a/articles/2018-05-03-title.markdown
+++ b/articles/2018-05-03-title.markdown
@@ -567,6 +567,7 @@ Auth Service will have methods like login and logout to facilitate authenticatio
 Let's create `auth.service.ts` in the same `auth0` folder and add the following content.
 
 ```typescript
+// src/services/auth.service.ts
 import { Injectable, NgZone } from "@angular/core";
 import { Storage } from "@ionic/storage";
 import { Subject } from "rxjs";
@@ -608,21 +609,22 @@ export class AuthService {
           this.loading = false;
           reject(err);
         } else {
-          // Set access token
-          console.log(authResult);
-          this.storage.set("id_token", authResult.idToken);
-          this.storage.set("access_token", authResult.accessToken);
+          // Set access token & id token
+          this.storage.set("id_token", authResult.idToken)
+          this.storage.set("access_token", authResult.accessToken)
+          .then(()=> {
+            // Set logged in
+            this.loading = false;
+            this.loggedIn = true;
+            this.isLoggedIn$.next(this.loggedIn);
+            resolve();
+          });
           this.accessToken = authResult.accessToken;
           // Set access token expiration
           const expiresAt = JSON.stringify(
             authResult.expiresIn * 1000 + new Date().getTime()
           );
           this.storage.set("expires_at", expiresAt);
-          // Set logged in
-          this.loading = false;
-          this.loggedIn = true;
-          this.isLoggedIn$.next(this.loggedIn);
-
           // Fetch user's profile info
           this.Auth0.client.userInfo(this.accessToken, (err, profile) => {
             if (err) {
@@ -631,7 +633,6 @@ export class AuthService {
             this.storage
               .set("profile", profile)
               .then(val => this.zone.run(() => (this.user = profile)));
-            resolve();
           });
         }
       });
@@ -646,7 +647,7 @@ export class AuthService {
     this.storage.remove("expires_at");
     this.storage.remove("id_token");
     this.accessToken = null;
-    this.user = null;
+    this.user = {};
     this.loggedIn = false;
     this.isLoggedIn$.next(this.loggedIn);
   }
